# svg_to_ico

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: ci.yml  release.yml
examples/: library.rs
src/: lib.rs  main.rs
supply-chain/: audits.toml  config.toml
