[package]
name = "svg_to_ico"
version = "1.2.0"
authors = ["Oliver Hamlet <oliver.hamlet@gmail.com>"]
description = "A utility and Rust library to convert SVG icons into Windows ICO files."
documentation = "https://docs.rs/svg_to_ico"
repository = "https://github.com/Ortham/svg_to_ico.git"
readme = "README.md"
license = "MIT"
exclude = [
    "target/*",
]
edition = "2018"

[badges]
travis-ci = { repository = "Ortham/svg_to_ico" }

[dependencies]
clap = "4"
ico = "0.1.0"
resvg = "0.25"
usvg = "0.23"
tiny-skia = "0.6"

[dev-dependencies]
tempfile = "3"
