[package]
name = "svg_to_ico"
version = "1.2.0"
authors = ["Oliver Hamlet <oliver.hamlet@gmail.com>"]
description = "A utility and Rust library to convert SVG icons into Windows ICO files."
repository = "https://github.com/Ortham/svg_to_ico.git"
license = "MIT"
edition = "2018"

[dependencies]
clap = "4"
ico = ">= 0.1.0, < 0.6"
resvg = ">= 0.42.0, < 0.46"
usvg = ">= 0.42.0, < 0.46"
tiny-skia = "0.11.4"

[dev-dependencies]
tempfile = "3"
